--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,11 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
+    <!--FONT AWESOME-->
+    <link rel="stylesheet" type="text/css" href="./all.css">
+
+    <script src = "./all.js" type="text/javascript"></script>
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -24,6 +29,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!--FONT-FAMILY-->
+      <link href="https://fonts.googleapis.com/css?family=Quicksand:400,600&display=swap" rel="stylesheet">  
+      
     <title>React App</title>
   </head>
   <body>
