--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!--FONT-FAMILY-->
-      <link href="https://fonts.googleapis.com/css?family=Quicksand:400,600&display=swap" rel="stylesheet">  
-      
+    <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
