--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,8 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+      <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
@@ -47,4 +49,8 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script src="/__/firebase/7.4.0/firebase-app.js"></script>
+  <script src="/__/firebase/7.4.0/firebase-firestore.js"></script>
+    <!-- Initialize Firebase -->
+  <script src="/__/firebase/init.js"></script>
 </html>
